--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: ci
 on:
   push:
     branches:
-      - "main"
+      - "master"
 jobs:
   build:
     runs-on: self-hosted
@@ -40,14 +40,34 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       -
-        name: Build and push
+        name: Build and push apache2
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./Dockerfile
+          file: /docker_images/Dockerfile-apache2
           push: true
           #tags: ${{ steps.meta.outputs.tags }}
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/swarmtest-2:${{ github.sha }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/apache2:${{ github.sha }}
+      
+      -
+        name: Build and push memcached
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: /docker_images/Dockerfile-memcached
+          push: true
+          #tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/memcached:${{ github.sha }}
+          
+      -
+        name: Build and push php-fpm
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: /docker_images/Dockerfile-phpfpm8.2
+          push: true
+          #tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/phpfpm:${{ github.sha }}
       
      # - 
      #   name: create env file
@@ -91,11 +111,11 @@ jobs:
           key: ${{ secrets.DOCKER_SSH_PRIVATE_KEY }}
           port: 22
           script: |
-            git clone https://github.com/tinhutins/docker-swarm-app-2.git
-            cd docker-swarm-app-2/
+            git clone https://github.com/tinhutins/docker-swarm-app-3.git
+            cd docker-swarm-app-3/
             export DOCKER_IMAGE_TAG=${{ github.sha }}
-            docker-compose config | docker stack deploy -c docker-compose.yaml my-swarm-app-2
-            rm -rf ../docker-swarm-app-2/
+            docker-compose config | docker stack deploy -c docker_images/docker-compose.yaml my-swarm-app-3-marker
+            rm -rf ../docker-swarm-app-3/
   
       #-  
       # name: Deploy to Docker swarm
