--- a/docker_images/Dockerfile-phpfpm8.2
+++ b/docker_images/Dockerfile-phpfpm8.2
@@ -1,21 +1,21 @@
-FROM php:8.2.7-fpm
+FROM php:8.2.7-fpm-alpine
 
-RUN apt-get update && apt-get install -y \
-    zlib1g-dev \
+RUN apk update && apk add --no-cache \
+    zlib-dev \
     libmemcached-dev \
-    libssl-dev \
-    libmagickwand-dev \
-    libicu-dev \
+    openssl-dev \
+    imagemagick-dev \
+    icu-dev \
     libmcrypt-dev \
     libzip-dev \
     libpng-dev \
     libedit-dev \
     libxml2-dev \
     libxslt-dev \
-    libbz2-dev \
-    libonig-dev \
-    libcurl4-openssl-dev \
-    && rm -rf /var/lib/apt/lists/*
+    bzip2-dev \
+    oniguruma-dev \
+    curl-dev \
+    && rm -rf /var/cache/apk/*
 
 RUN pecl install imagick msgpack igbinary memcached \
     && docker-php-ext-enable imagick msgpack igbinary memcached \
