--- a/docker_images/Dockerfile-phpfpm8.2
+++ b/docker_images/Dockerfile-phpfpm8.2
@@ -15,6 +15,9 @@ RUN apk update && apk add --no-cache \
     bzip2-dev \
     oniguruma-dev \
     curl-dev \
+    autoconf \
+    make \
+    g++ \
     && rm -rf /var/cache/apk/*
 
 RUN pecl install imagick msgpack igbinary memcached \
