--- a/docker_images/docker-compose.yml
+++ b/docker_images/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 services:
   apache:
     image: "hutinskit/apache2:${DOCKER_IMAGE_TAG}"
-    container_name: apache_test
+    container_name: apache
     ports:
       - '80:80'
       - '9090:9090'
@@ -10,20 +10,21 @@ services:
     volumes:
     - ../apache2/etc/apache2.conf:/etc/apache2/apache2.conf
     - ../apache2/etc/ports.conf:/etc/apache2/ports.conf
-    - ..apache2/etc/mods-enabled/mpm_event.conf:/etc/apache2/mods-enabled/mpm_event.conf
+    - ../apache2/etc/mods-enabled/mpm_event.conf:/etc/apache2/mods-enabled/mpm_event.conf
     - ../apache2/etc/sites-enabled/intercom_markerdev_info.conf:/etc/apache2/sites-enabled/intercom_markerdev_info.conf
     - ../test_site_intercom:/var/www/vhosts/intercom_markerdev_info
   phpfpm:
+    container_name: phpfpm
     image: "hutinskit/phpfpm:${DOCKER_IMAGE_TAG}"
     ports: 
       - '9000:9000'
         # - '9002:9002'
     volumes:
-      - ../php_fpm_82/intercom.conf:/usr/local/etc/php-fpm.d/intercom.conf
+      #- ../php_fpm_82/intercom.conf:/usr/local/etc/php-fpm.d/intercom.conf
       - ../test_site_intercom:/var/www/vhosts/intercom_markerdev_info
       #- /root/marker_app_stack/php_fpm_82/zz-docker.conf:/usr/local/etc/php-fpm.d/zz-docker.conf
   memcached:
-    container_name: memcached_test
+    container_name: memcached
     image: "hutinskit/memcached:${DOCKER_IMAGE_TAG}"
     ports:
         - "11211:11211"
