--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ env:
   APACHE_IMAGE_NAME: "hutinskit/apache2"
   APACHE_IMAGE_TAG: "v1.0.30"
   MEMCACHED_IMAGE_NAME: "hutinskit/memcached"
-  MEMCACHED_IMAGE_TAG: "v1.0.30"
+  MEMCACHED_IMAGE_TAG: "v1.0.31"
   PHP_IMAGE_NAME: "hutinskit/phpfpm"
   PHP_IMAGE_TAG: "v1.0.30"
 
@@ -161,7 +161,11 @@ jobs:
          # target: /root
        
   deploy:
-    needs: [build-image-apache2, build-image-memcached, build-image-php]
+    needs:
+      - build-image-apache2
+      - build-image-memcached
+      - build-image-php
+    if: ${{ needs.build-image-apache2.result == 'success' || needs.build-image-memcached.result == 'success' || needs.build-image-php.result == 'success' }}
     runs-on: self-hosted
     steps:
      # -
