test third marker docker swarm app v13

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,6 +71,7 @@ jobs:
           fi
   
   display-image-memacached:
+    needs: check-image
     runs-on: self-hosted
     steps:
       - run: echo ${{needs.check-image.outputs.BUILD-IMAGE-MEMCACHED}}
