test third marker docker swarm app v15

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,11 +52,12 @@ jobs:
           else
             echo "testing"
             echo "BUILD-IMAGE-MEMCACHED=true" >> $GITHUB_OUTPUT
+            echo "$GITHUB_OUTPUT"
             # Perform additional steps if the image does not exist
           fi
       
-      - name: Display
-        run: echo "${{ steps.memcached-step.outputs.BUILD-IMAGE-MEMCACHED }}"
+      # - name: Display
+      #   run: echo "${{ steps.memcached-step.outputs.BUILD-IMAGE-MEMCACHED }}"
 
       - name: Check Docker Image for phpfpm and push it if doesn't exists
         id: php-step
@@ -74,7 +75,7 @@ jobs:
     needs: check-image
     runs-on: self-hosted
     steps:
-      - run: echo ${{needs.check-image.outputs.BUILD-IMAGE-MEMCACHED}}
+      - run: echo ${{needs.check-image.steps.memcached-step.outputs.BUILD-IMAGE-MEMCACHED}}
 
   build-image-apache2:
     needs: check-image
