--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,7 +76,7 @@ jobs:
     runs-on: self-hosted
     steps:
       - env:
-          OUTPUT1: ${{needs.check-image.outputs}}
+          OUTPUT1: ${{ needs.check-image.outputs.memcached-step.BUILD-IMAGE-MEMCACHED }}"
         run: echo "$OUTPUT1"
   debug:
     needs: [check-image, display-image-memacached]
