--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,7 +75,7 @@ jobs:
     runs-on: self-hosted
     steps:
       - env:
-          OUTPUT1: ${{ needs.check-image.outputs}}"
+          OUTPUT1: "${{ needs.check-image.outputs}}"
         run: echo "$OUTPUT1"
 
   build-image-apache2:
