--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ env:
   APACHE_IMAGE_NAME: "hutinskit/apache2"
   APACHE_IMAGE_TAG: "v1.0.30"
   MEMCACHED_IMAGE_NAME: "hutinskit/memcached"
-  MEMCACHED_IMAGE_TAG: "v1.0.32"
+  MEMCACHED_IMAGE_TAG: "v1.0.33"
   PHP_IMAGE_NAME: "hutinskit/phpfpm"
   PHP_IMAGE_TAG: "v1.0.30"
 
@@ -157,6 +157,12 @@ jobs:
           tags: ${{ env.PHP_IMAGE_NAME }}:${{ env.PHP_IMAGE_TAG }}
     outputs:
       result: ${{ job.status }}
+      
+  display-job-status:
+    needs:  build-image-memcached
+    runs-on: self-hosted
+    steps:
+      - run: echo ${{ needs.build-image-memcached.outputs.result }}
       
      # - 
      #   name: create env file
