--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,34 +3,64 @@ services:
   apache:
     image: "${APACHE_DOCKER_IMAGE_TAG}"
     container_name: apache
-    ports:
-      - '80:80'
-      - '9090:9090'
-      - '9091:9091'
     volumes:
-      - ~/marker_persistent_data/apache2/etc/apache2.conf:/etc/apache2/apache2.conf
-      - ~/marker_persistent_data/apache2/etc/ports.conf:/etc/apache2/ports.conf
-      - ~/marker_persistent_data/apache2/etc/mods-enabled/mpm_event.conf:/etc/apache2/mods-enabled/mpm_event.conf
-      - ~/marker_persistent_data/apache2/etc/sites-enabled/intercom_markerdev_info.conf:/etc/apache2/sites-enabled/intercom_markerdev_info.conf
-      - ~/marker_persistent_data/test_site_intercom:/var/www/vhosts/intercom_markerdev_info
+      - /var/containers/sites/test/apache/ro/apache2.conf:/etc/apache2/apache2.conf
+      - /var/containers/sites/test/apache/ro/ports.conf:/etc/apache2/ports.conf
+      - /var/containers/sites/test/apache/ro/mpm_event.conf:/etc/apache2/mods-enabled/mpm_event.conf
+      - /var/containers/sites/test/apache/ro/intercom_markerdev_info.conf:/etc/apache2/sites-enabled/intercom_markerdev_info.conf
+      - /var/containers/sites/test/apache/rw/test_site_intercom:/var/www/vhosts/intercom_markerdev_info
+    networks:
+      - php_network
+      - traefik-public
     deploy:
+      mode: replicated
+      replicas: 3
       placement:
-        constraints: [node.hostname == test-jenkins-cicd]
+        constraints:
+          - node.role == worker
+    labels:
+        - traefik.enable=true
+        - traefik.docker.network=traefik-public
+        - traefik.constraint-label=traefik-public
+        - traefik.http.routers.portainer-http.rule=Host(`markerstage-testsite.cratis.cc`)
+        - traefik.http.routers.portainer-http.entrypoints=http
+        - traefik.http.routers.portainer-http.middlewares=https-redirect
+        - traefik.http.routers.portainer-https.rule=Host(`markerstage-testsite.cratis.cc`)
+        - traefik.http.routers.portainer-https.entrypoints=https
+        - traefik.http.routers.portainer-https.tls=true
+        - traefik.http.services.portainer.loadbalancer.server.port=80
   phpfpm:
     container_name: phpfpm
-    image: "${PHP_DOCKER_IMAGE_TAG}"
-    ports: 
-      - '9000:9000'
+    #image: "${PHP_DOCKER_IMAGE_TAG}"
+    image: "php:8.2.7-fpm-alpine"
         # - '9002:9002'
-    volumes:
+    #volumes:
       #- ../php_fpm_82/intercom.conf:/usr/local/etc/php-fpm.d/intercom.conf
-      - ~/marker_persistent_data/test_site_intercom:/var/www/vhosts/intercom_markerdev_info
+      #- ~/marker_persistent_data/test_site_intercom:/var/www/vhosts/intercom_markerdev_info
       #- /root/marker_app_stack/php_fpm_82/zz-docker.conf:/usr/local/etc/php-fpm.d/zz-docker.conf
+    networks:
+      - php_network
     deploy:
+      mode: replicated
+      replicas: 3
       placement:
-        constraints: [node.hostname == test-jenkins-cicd]
+        constraints:
+          - node.role == worker
   memcached:
     container_name: memcached
     image: "${MEMCACHED_DOCKER_IMAGE_TAG}"
-    ports:
-        - "11211:11211"
+    networks:
+      - php_network
+    deploy:
+      mode: replicated
+      replicas: 3
+      placement:
+        constraints:
+          - node.role == worker
+
+networks:
+  php_network:
+    driver: overlay
+    attachable: true
+  traefik-public:
+    external: true
