--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     volumes:
       - /var/containers/sites/test/apache/ro/apache2.conf:/etc/apache2/apache2.conf
       - /var/containers/sites/test/apache/ro/ports.conf:/etc/apache2/ports.conf
-      - /var/containers/sites/test/apache/ro/mpm_event.conf:/etc/apache2/mods-enabled/mpm_event.conf
-      - /var/containers/sites/test/apache/ro/intercom_markerdev_info.conf:/etc/apache2/sites-enabled/intercom_markerdev_info.conf
-      - /var/containers/sites/test/apache/rw/test_site_intercom:/var/www/vhosts/intercom_markerdev_info
+      - /var/containers/sites/test/apache/ro/mods-enabled/mpm_event.conf:/etc/apache2/mods-enabled/mpm_event.conf
+      - /var/containers/sites/test/apache/ro/sites-enabled:/etc/apache2/sites-enabled/intercom_markerdev_info.conf
+      - /var/containers/sites/test/apache/rw/test_site_intercom/:/var/www/vhosts/intercom_markerdev_info/
     networks:
       - php_network
       - traefik-public
